feat: stabilize label scanning pipeline